--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.13.3",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/react": "19.1.12",
     "gh-pages": "^6.3.0",
